# route.dog

./: .gitignore  BD_TICKET.md  CLAUDE.md  DESIGN.md  HANDOFF.md  TODO.md  Taskfile.yml  compose.yaml  instructions.txt  package.json  state.json  test-browser.mjs  test-e2e-full.mjs  test-main-url.mjs  test-manual.sh  test-new-deployment.mjs  test-redesign.mjs  test-simplified.mjs
.claude/: mcp-servers.json
.github/workflows/: deploy-ui.yml
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.toml
api-old/: .env.example  README.md  go.mod
api-old/internal/model/: address.go
api-old/test/: integration_test.go
api/cmd/server/: main.go
api/internal/handler/: address.go
api/internal/model/: address.go
api/internal/service/: geocoder.go  openai.go
api/src/: index.py  index.ts  models.py
api/src/routes/: addresses.py
api/src/services/: geocoding_service.py  openai_service.py
api/test/: addresses.hurl  integration_test.go
api/test/environments/: local.env  production.env  staging.env
docs/: SENTRY_SETUP.md
ui/: .env.development  .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/.github/workflows/: deploy.yml
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AddAddressDialog.tsx  AddStopsSheet.tsx  AddressAutocomplete.tsx  AddressItem.tsx  AddressListPanel.tsx  DogMascot.tsx  DynamicIsland.tsx  (+13 more)
ui/test-data/: sample-addresses.txt
(+5 files in other folders)
